# AVC

./: .gitignore  README.md  first_time_setup.bash  notes.md  set_remote_rosmaster.sh
firmware/control_board_test/: control_board_test.ino
firmware/echo/: echo.ino
firmware/gps_passthru/: gps_passthru.ino
firmware/libraries/rover12_comm/: rover12_comm.cpp  rover12_comm.h
firmware/quadencoders/: quadencoders.ino
firmware/sensor_board_test/: sensor_board_test.ino
firmware/steer_calib/: steer_calib.ino
hardware/libs/: rover12.lbr
hardware/projects/control_board/: control_board.brd  control_board.sch  eagle.epf
hardware/projects/front_wheel_encoder/: eagle.epf  front_wheel_encoder.brd  front_wheel_encoder.sch
hardware/projects/power_board/: eagle.epf  power_board.brd  power_board.sch
hardware/projects/rear_wheel_encoder/: rear_wheel_encoder.brd
hardware/projects/sensor_board/: sensor_board.brd  sensor_board.sch
hardware/projects/wheel_encoder/: eagle.epf  wheel_encoder.sch
src/controller/: CMakeLists.txt  package.xml
src/controller_tuning/: CMakeLists.txt  package.xml
src/controller_tuning/src/scripts/: gen_test_bags.py
src/pcc/: CMakeLists.txt  package.xml
src/pcc/include/pcc/: CurveBuilder.h  convert.h  pcc.h  types.h
src/pcc/src/: CurveBuilder.cpp  convert.cpp  types.cpp
src/pcc/test/: CurveBuilder_test.cpp
src/planner/: CMakeLists.txt  package.xml
src/planner/launch/: planner.launch
src/planner/params/: config.yaml
src/planner/src/: planner.cpp
src/rover12_comm/: CMakeLists.txt  copy_from_firmware.sh  package.xml
src/rover12_comm/include/rover12_comm/: rover12_comm.h
src/rover12_comm/src/: rover12_comm.cpp
src/rover12_description/: CMakeLists.txt  package.xml
src/rover12_description/config/: joint_state_publisher.yaml  robot_state_publisher.yaml
src/rover12_description/include/rover12_description/: Broadcaster.h
src/rover12_description/launch/: display.launch  display.rviz  rover12.launch  rover12_urdf.launch
src/rover12_description/meshes/: wheel.dae
src/rover12_description/src/: Broadcaster.cpp  broadcaster_node.cpp
src/rover12_description/urdf/: rover12.urdf.xacro
src/rover12_drivers/: CMakeLists.txt  package.xml
src/rover12_drivers/include/rover12_drivers/: messenger.h  serial_comm.h  serial_msg.h  serial_port.h
src/rover12_drivers/launch/: control_board.launch  drivers.launch  sensor_board.launch
src/rover12_drivers/msg/: AutonomousMode.msg  EncoderStatus.msg  GpsStatus.msg  ImuCalibration.msg  ServoControl.msg  Trajectory.msg  Waypoint.msg
src/rover12_drivers/params/: throttle_pid_gains.yaml
src/rover12_drivers/src/: control_board_node.cpp  messenger.cpp  sensor_board_node.cpp  serial_msg.cpp  serial_port.cpp
src/rover12_launch/: CMakeLists.txt  package.xml
src/rover12_launch/launch/: avc.launch  avc_safe.launch  drivers.launch  localizer.launch  remote_rviz.launch  remote_rviz.rviz  system.launch  system_safe.launch
src/rover12_launch/params/: map_localizer.yaml  navsat_transform.yaml  odom_localizer.yaml  sensor_config.yaml  ukf_localizer.yaml
src/rover12_msgs/: CMakeLists.txt  package.xml
src/rover12_msgs/msg/: WheelDistance.msg
src/simulator/: CMakeLists.txt  package.xml
src/simulator/include/simulator/: Simulator.h  World.h
src/simulator/launch/: simulator.launch
src/simulator/src/: Simulator.cpp  World.cpp  simulator_node.cpp
src/simulator/worlds/: avc_2016.yaml
src/soft_estop/: CMakeLists.txt  package.xml
src/soft_estop/launch/: estop.launch
src/soft_estop/src/: soft_estop.cpp
src/traj_builder/: CMakeLists.txt  package.xml
src/traj_builder/src/: traj_builder.cpp
src/velocity_impulse/: CMakeLists.txt  package.xml
src/velocity_impulse/src/: velocity_impulse.cpp
tools/NetworkManager/: NetworkManager.conf
tools/dnsmasq/: dnsmasq.conf
tools/hostapd/: hostapd.conf
tools/iptables/: iptables.rules
tools/network_interfaces/: wlan0
tools/quadrature_patterns/: README.md  genpattern.py
tools/ros_workspace/: add_src_package  deps  fetch_src_packages  make
tools/steer_calibration/: getradius.py
tools/trajedit/: .gitignore  Makefile  main.cpp  window.cpp  window.h
