<?xml version="1.0"?>
<package>
  <name>controller_tuning</name>
  <version>0.0.1</version>
  <description>The controller_tuning package has useful scripts and models for
    tuning the velocity and steering controllers.</description>

  <maintainer email="mpikusov@gmail.com">Maria Pikusova</maintainer>
  <maintainer email="bob@bobsomers.com">Bob Somers</maintainer>

  <license>MIT</license>

  <url type="website">http://blog.pikusomers.com/tag/avc-2016/</url>

  <author email="mpikusov@gmail.com">Maria Pikusova</author>
  <author email="bob@bobsomers.com">Bob Somers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rover12_drivers</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rover12_drivers</run_depend>
</package>
