<?xml version="1.0"?>
<package>
  <name>pcc</name>
  <version>0.0.1</version>
  <description>This package contains an implementation of Piecewise Clothoid
    Curves.</description>

  <maintainer email="bob@bobsomers.com">Bob Somers</maintainer>

  <license>MIT</license>

  <url type="website">http://www.pikusomers.com/tag/avc-2016/</url>


  <author email="bob@bobsomers.com">Bob Somers</author>
  <author email="mpikusov@gmail.com">Maria Pikusova</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>common_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>common_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>gtest</test_depend>
</package>
