<?xml version="1.0"?>
<package>
  <name>planner</name>
  <version>0.0.1</version>
  <description>Do-nothing planner that loads a predefined path and publishes it
    as a trajectory.</description>

  <maintainer email="mpikusov@gmail.com">Maria Pikusova</maintainer>
  <maintainer email="bob@bobsomers.com">Bob Somers</maintainer>

  <license>MIT</license>

  <url type="website">http://www.pikusomers.com/tag/avc-2016/</url>

  <author email="mpikusov@gmail.com">Maria Pikusova</author>
  <author email="bob@bobsomers.com">Bob Somers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rover12_drivers</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>ackermann_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rover12_drivers</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
