<?xml version="1.0"?>
<package>
  <name>soft_estop</name>
  <version>0.0.1</version>
  <description>Software emergency stop (autonomous mode switch).</description>

  <maintainer email="mpikusov@gmail.com">Maria Pikusova</maintainer>
  <maintainer email="bob@bobsomers.com">Bob Somers</maintainer>

  <license>MIT</license>

  <url type="website">http://www.pikusomers.com/tag/avc-2016/</url>

  <author email="mpikusov@gmail.com">Maria Pikusova</author>
  <author email="bob@bobsomers.com">Bob Somers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rover12_drivers</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>rover12_drivers</run_depend>
  <run_depend>roscpp</run_depend>
</package>
