<?xml version="1.0"?>
<package>
  <name>traj_builder</name>
  <version>0.0.1</version>
  <description>Builds a nav_msgs/Path trajectory from a logged nav_msgs/Odometry
    topic.</description>

  <maintainer email="mpikusov@gmail.com">Maria Pikusova</maintainer>
  <maintainer email="bob@bobsomers.com">Bob Somers</maintainer>

  <license>MIT</license>

  <url type="website">http://www.pikusomers.com/tag/avc-2016/</url>

  <author email="mpikusov@gmail.com">Maria Pikusova</author>
  <author email="bob@bobsomers.com">Bob Somers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
</package>
