<?xml version="1.0"?>
<package>
  <name>velocity_impulse</name>
  <version>0.0.1</version>
  <description>Generates a velocity impulse AckermannDrive message for tuning
    velocity PID controller.</description>

  <maintainer email="mpikusov@gmail.com">Maria Pikusova</maintainer>
  <maintainer email="bob@bobsomers.com">Bob Somers</maintainer>

  <license>MIT</license>

  <url type="website">http://www.pikusomers.com/tag/avc-2016/</url>

  <author email="mpikusov@gmail.com">Maria Pikusova</author>
  <author email="bob@bobsomers.com">Bob Somers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ackermann_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>ackermann_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
